# ajf

./: package.json  packages.bzl
src/core/: BUILD.bazel  package.json  pdfmake.d.ts  tsconfig-build.json
src/core/report-to-pdf/: BUILD.bazel  fix-dimension.ts  keys-to-camel.ts  public-api.ts  report-container-to-pdf.ts  report-instance-to-pdf.ts  report-to-pdf-module.ts  report-to-pdf.ts  report-widget-to-pdf.ts  styles-to-props.ts  tsconfig-build.json  wrap-if-has-background.ts
src/dev-app-mat/: main-module.ts  system-config.ts
src/dev-app-mat/dev-app/: dev-app-layout.ts  routes.ts
src/dev-app-mat/report-to-pdf/: report-to-pdf-demo-module.ts  report-to-pdf-demo.html  report-to-pdf-demo.scss  report-to-pdf-demo.ts
